# gRPC-pass-through

./: Cargo.toml  build.rs
proto/: corp.proto
src/: main.rs
